# tinyfeed

./: Cargo.toml  Makefile  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221003_112817_create_feed_post_table.rs
src/: main.rs
src/app/: mod.rs
src/app/feed/: mod.rs
src/db/: conn.rs  mod.rs
src/entity/: feed.rs  mod.rs  post.rs  prelude.rs
src/feed/: extractor.rs  mod.rs  query.rs
