[package]
name = "tinyfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4"
actix = "0.13"
actix-interop = "0.4"

# feed
rss = "2"

# logging
log = "0.4"
env_logger = "0.9"


# database ORM
sea-orm = { version = "0.9", features = [
    "runtime-actix-native-tls",
    "sqlx-sqlite",
] }

migration = { path = "migration" }


# error handling
anyhow = "1"

# reqwest
reqwest = { version = "0.11.12", features = ["json"] }

# json
serde = { version = "1", features = ["derive"] }
